boton de agregar al carrito

--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -32,100 +32,15 @@
             <td>{{ p.iva|truncatechars:20 }}</td>
             <td>{{ p.stock|truncatechars:20 }}</td>
             <td>
-              <a class="fa-solid fa-crop" href="{% url 'ventas_app:update' p.id %}"></a>
+              <a class="fa-solid fa-crop edit1" href="{% url 'ventas_app:update' p.id %}"></a>
               <a class="fa-regular fa-trash-can" href="{% url 'ventas_app:delete' p.id %}"></a>
+              <button class="agregar-carrito">Agregar al carrito</button>
             </td>
           </tr>
           {% endfor %}
           
         </tbody>
       </table>
-      <!--
-
-        <table>
-          
-          <tr class="propiedad">
-            <th>Animal</th>
-            <th>Propietario</th>
-            <th>Precio</th>
-            <th>N Factura</th>
-            <th>Edad</th>
-            <th>Enfermedad</th>
-            <th class="celdaCrud"></th>
-          </tr>
-          
-          <tr id="valores">
-            <td>gato</td>
-            <td>Sancho</td>
-            <td>1'200.000</td>
-           <td>0000111100000</td>
-           <td>11 años</td>
-           <td>Cancer</td>
-           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          
-          <tr>
-            <td>perro</td>
-            <td>Dagoberto</td>     
-            <td>500.000</td>
-            <td>0000122000000</td>
-            <td>12 años</td>
-            <td>Fractura</td>
-            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          
-          <tr>     
-            <td>conejo</td>
-            <td>Clementina</td>     
-            <td>800.000</td>     
-            <td>0000222200000</td>
-            <td>2 años</td>
-            <td>Fractura</td>
-            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          <tr>
-            <td>gato</td>
-            <td>Sancho</td>
-            <td>1'200.000</td>
-            <td>0000111100000</td>
-            <td>11 años</td>
-            <td>Cancer</td>
-            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          
-          <tr>
-            <td>perro</td>
-            <td>Dagoberto</td>     
-            <td>500.000</td>
-            <td>0000122000000</td>
-            <td>12 años</td>
-            <td>Fractura</td>
-            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          
-          <tr>     
-            <td>conejo</td>
-            <td>Clementina</td>     
-            <td>800.000</td>     
-            <td>0000222200000</td>
-            <td>2 años</td>
-            <td>Fractura</td>
-            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          <tr>
-            <td>gato</td>
-            <td>Sancho</td>
-            <td>1'200.000</td>
-            <td>0000111100000</td>
-            <td>11 años</td>
-            <td>Cancer</td>
-            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-          </tr>
-          
-        </tr>  
-      </table>
-      
-    -->
       <script src="{% static 'scripts/ventas.js' %}"></script>
       
 {% endblock content %}
