se coloca el icono del carrito en la parte superior

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,11 +74,11 @@
     <!--FINAL de MAIN-->
     <div class="right">
         <div class="top">
-            <button id="menu-btm">
+            <div>
                 <span class="material-icons-sharp">
-                    menu
+                    shopping_cart
                 </span>
-            </button>         
+            </div>         
             <div class="theme-toggler">
                 <span class="material-icons-sharp active">
                     light_mode
