add registrar admin formulario

--- a/templates/administrador/home.html
+++ b/templates/administrador/home.html
@@ -30,17 +30,42 @@
                 </span>
                 <h3>Inicio</h3>
             </a>
-            <a href="{% url 'veterinaria_app:resgistrarUsuario' %}" class="historial">
+            <a href="{% url 'users_app: registrar-Admin' %}">
                 <span class="material-icons-sharp">
-                    app_registration
+                    person_add
                 </span>
-                <h3>Registrar Usuario</h3>
+                <h3>Registrar Administrador</h3>
+            </a>
+            <a href="{% url 'veterinaria_app:home' %}" class="historial">
+                <span class="material-icons-sharp">
+                    person_add
+                </span>
+                
+                <h3>Registrar Veterinario</h3>
             </a>
             <a href="#" class="datos">
                 <span class="material-icons-sharp">
-                    person
+                    person_add
                 </span>
-                <h3>Tabla Usuarios</h3>
+                <h3>Registrar ventas</h3>
+            </a>
+            <a href="#" class="datos">
+                <span class="material-icons-sharp">
+                    app_registration
+                </span>
+                <h3>Tabla Admin</h3>
+            </a>
+            <a href="#" class="datos">
+                <span class="material-icons-sharp">
+                    app_registration
+                </span>
+                <h3>Tabla Veterinario</h3>
+            </a>
+            <a href="#" class="datos">
+                <span class="material-icons-sharp">
+                    app_registration
+                </span>
+                <h3>Tabla Ventas</h3>
             </a>
             <a href="#" class="active">
                 <span class="material-icons-sharp">
