add form registrar ventas

--- a/templates/administrador/form_ventas.html
+++ b/templates/administrador/form_ventas.html
@@ -10,10 +10,10 @@
     
     <title>Form_veterinario</title>
 
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles/Administrador/Form_ventas.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/Administrador/Form_veterinario.css' %}">
     
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'styles/Administrador/form_ventas.css' %}">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
 
             <form action="">
                 <div class="titulo">
-                <h1>Registrar Veterinario</h1>    
+                <h1>Registrar Usuario Ventas</h1>    
                 </div>
                 <div class="campos">
                     <div class="c1">
@@ -39,11 +39,6 @@
                         
                         <div class="espacio">
                             <label>Apellido</label>
-                            <input type="text" name="name[]" id="TextId">
-                        </div>
-
-                        <div class="espacio">
-                            <label>Titulo</label>
                             <input type="text" name="name[]" id="TextId">
                         </div>
                     </div>
@@ -84,15 +79,15 @@
                                 <input type="password" name="name[]" id="TextId">
                             </div>
                             <div class="espacio">
-                            <label>Fecha Ingreso</label>
-                            <input type="date" name="name[]" id="FechaIngreso">
+                                <label>Fecha Ingreso</label>
+                                <input type="date" name="name[]" id="FechaIngreso">
                             </div>
                     </div>  
                     <div class="c2">
-                            <button class="boton"> Registrar</button>
+                        <button class="boton"> Registrar</button>
                     </div>
                 </div>
-            
+                
             </form>
             
         </div>
