--- a/templates/administrador/form_veterinario.html
+++ b/templates/administrador/form_veterinario.html
@@ -12,7 +12,7 @@
 
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles/Administrador/Form_ventas.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/Administrador/form_veterinario.css' %}">
     
 
 </head>
@@ -22,8 +22,11 @@
         <div class="center">
 
             <form action="">
-                <div class="titulo">
-                <h1>Registrar Veterinario</h1>    
+                <div class="content-titulo">
+                    <span class="icono material-icons-sharp">
+                    medication
+                    </span>
+                    <h1 class="titulo">Registrar Veterinario</h1>    
                 </div>
                 <div class="campos">
                     <div class="c1">
