--- a/templates/administrador/form_admin.html
+++ b/templates/administrador/form_admin.html
@@ -22,7 +22,7 @@
         <div class="center">
 
             <form action="">
-                <div class="conten-titulo">
+                <div class="content-titulo">
                     <span class="icono material-icons-sharp">
                     assignment_ind
                     </span>
