--- a/templates/administrador/form_ventas.html
+++ b/templates/administrador/form_ventas.html
@@ -22,9 +22,13 @@
         <div class="center">
 
             <form action="">
-                <div class="titulo">
-                <h1>Registrar Usuario Ventas</h1>    
+                <div class="content-titulo">
+                <span class="icono material-icons-sharp">
+                shopping_cart
+                </span>
+                <h1 class="titulo">Registrar Usuario Ventas</h1>    
                 </div>
+
                 <div class="campos">
                     <div class="c1">
                         <div class="espacio">
