--- a/templates/ventas/delete.html
+++ b/templates/ventas/delete.html
@@ -4,12 +4,15 @@
 {% endblock title %}
 {% block content %}
 
+<!--
 <form method="post">{% csrf_token %}
     <h3>¿Quiere eliminar este profucto? {{ producto.nombre }}</h3>
         <p >confirme que desea eliminar</p>
         <button type="submit">Confirmar</button>      
       
 </form>
+-->
+<link rel="stylesheet" href="{% static 'styles/delete.css' %}">
 
 
 {% endblock content %}
