--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -35,11 +35,19 @@
             <td>{{ p.stock|truncatechars:20 }}</td>
             <td>
               <a class="fa-solid fa-crop" href="{% url 'ventas_app:update' p.id %}"></a>
-              <a class="fa-regular fa-trash-can" href="{% url 'ventas_app:delete' p.id %}"></a>
+              <a class="fa-regular fa-trash-can" href="javascript:abrir()"></a>
             </td>
           </tr>
           {% endfor %}
           
+            <div class="Ventanae" id="elimi">
+              <h3>¿Quiere eliminar este profucto? </h3>
+              <h3>{{ producto.nombre }}</h3>
+              <h3>confirme que desea realizar</p>
+              <br>
+              <a id="Confirmar" href="javascript:confirmar()">Confirmar</a>
+              <a id="cancelar" href="javascript:cerrar()"> cancelar</a>
+            </div>
         </tbody>
       </table>
       <!--
