--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -11,9 +11,15 @@
           <a class="agregar" href="{% url 'ventas_app:formulario' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
     </section>
+    <div class="buscar">
+      <input class="t" type="text" placeholder="Buscar" required >
+       <i class="lupa"><img src="/static/assets/lupa.png"></i> 
+    </div>
+    <br>
+    <br>
      <table>
        <thead>
-
+          
          <tr class="propiedad">
            <th>Nombre</th>
            <th>Descripcion</th>
