--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -14,6 +14,12 @@
           <button class="agregar"><i class="fa-solid fa-plus"></i>  Agregar</button>
         </nav>
     </section>
+    <div class="buscar">
+      <input class="t" type="text" placeholder="Buscar" required >
+       <i class="lupa"><img src="/static/assets/lupa.png"></i> 
+    </div>
+    <br>
+    <br>
      <table>
           <tr class="propiedad">
             <th>Nombre</th>
