--- a/templates/index.html
+++ b/templates/index.html
@@ -72,12 +72,7 @@
                 </span>
                 <h3>Ventas</h3>
             </a>
-            <a href="#" class="salir">
-                <span class="material-icons-sharp">
-                    logout
-                </span>
-                <h3>Logout</h3>
-            </a>
+            <br>
         </div>
     </aside>
     <!--MAIN-->
@@ -105,6 +100,12 @@
                     dark_mode
                 </span>
             </div>
+            <a class="salir" href="{% url 'user_app:login' %}">
+                <span class="material-icons-sharp">
+                    logout
+                </span>
+                <h4>Salir</h4>
+            </a>
             <div class="profile">
                 <div class="info">
                     <p>Hola,<b class="user"> Admin</b></p>
@@ -117,6 +118,7 @@
         </div>
     </div>
 </div>
+
 <script src="{% static 'scripts/home.js' %}"></script>
 </body>
 </html>
