--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,12 @@
                 </span>
                 <h3>Ventas</h3>
             </a>
+            <a href="{% url 'user_app:administrador' %}" class="btn-ventas">
+                <span class="material-icons-sharp">
+                    admin_panel_settings
+                </span>
+                <h3>Administrador</h3>
+            </a>
             <a href="#" class="salir">
                 <span class="material-icons-sharp">
                     logout
