--- a/templates/administrador/home.html
+++ b/templates/administrador/home.html
@@ -9,7 +9,7 @@
 
         <div class="contenedor-botones">
             <a href="{% url 'user_app:registrarUsuarios' %}" class="boton">Registrar Usuario</a>
-            <button class="boton">Ver Usuario</button>
+            <a href="{% url 'user_app:registrarUsuarios' %}" class="boton">Ver Tablas Usuarios</a>
             <button class="boton">Reporte Usuario</button>
         </div>
     </div>
