--- a/static/styles/Administrador/tapTablas.css
+++ b/static/styles/Administrador/tapTablas.css
@@ -1,9 +1,34 @@
+.contenedor
+{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: left;
+}
+.center
+{
+    /*border: 1px solid black;*/
+    width:1300px;
+    height: 620px;
+    border-radius: 12px;
+    /*box-shadow:8px 8px 8px 8px rgb(179, 179, 179);*/
+    padding-left: 0px;
+}
+.contenedor-titulo{
+    width:100%;
+    height: 100px;
+    padding-top: 0px;
+    display: flex;
+    justify-content: left;
+
+    /*border: 1px solid black;*/
+}
 
 .mytabs {
     display: flex;
     flex-wrap: wrap;
-    max-width: 900p;
-    margin: 0px auto;
+    max-width: 900px;
+    margin: 0px;
     padding: 0px;
 }
 .mytabs input[type="radio"] {
@@ -12,14 +37,14 @@
 .mytabs label {
     border-radius: 8px;
     padding:10px;
+    width: 200px;
     height: 60px;
     font-size: 16px;
     font-weight: bold;
-    
 }
 
 .mytabs .tab {
-    width: 1200;
+    width:1200;
     height: 600px;
     padding: 20px;
     background: #fff;
