boton de agregar

--- a/templates/ventas/facturas.html
+++ b/templates/ventas/facturas.html
@@ -7,6 +7,9 @@
 <script src="https://kit.fontawesome.com/7fed639e7f.js" crossorigin="anonymous"></script>
     <section class="header">
       <h2 class="ventas">Facturas</h2>
+      <nav class="btn">
+        <a class="agregar" href="{% url 'ventas_app:formularioFacturas' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
+      </nav>
     </section>
      <table>
        <thead>
